<resources>
    <string name="app_name">AnaMuslim</string>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="sunset">Sunset</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="be_with_allah">Be with Allah</string>
    <string name="get_started">Get Started</string>
    <string name="select_theme">Select Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="primary_color">Primary Color</string>
    <string name="global_theme">Global Theme</string>
    <string name="select_location">Select Location</string>
    <string name="no_cities_found_matching_the_name_you_entered">No cities found matching the name you entered</string>
    <string name="search_online">Search Online</string>
    <string name="retry">Retry</string>
    <string name="search_cities">Search Cities</string>
    <string name="enter_city_name">Type city-name...</string>
    <string name="search_offline">Search offline</string>
    <string name="locate_using_gps">Locate using GPS</string>
    <string name="auto_detect_location">Auto Detect Location</string>
    <string name="no_internet">No Internet</string>
    <string name="internet_is_req_to_search_cities_online">Internet access is required to search cities online</string>
    <string name="open_settings">Open Settings</string>
    <string name="open_wifi_settings">Open WiFi settings</string>
    <string name="or">or</string>
    <string name="picked_location">Picked Location</string>
    <string name="country">Country:</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="timezone">Timezone</string>
    <string name="cancel">Cancel</string>
    <string name="_continue">Continue</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="configuration">Configuration</string>
    <string name="calculation_method">Calculation Method</string>
    <string name="none">None</string>
    <string name="asr_juristic">Asr Juristic</string>
    <string name="higher_latitudes">Higher Latitudes</string>
    <string name="confirm_configuration">Confirm Configuration</string>
    <string name="msg_confirm_config">By confirming this configuration, AnaMuslim will use this config to calculate PrayTimes even if  times are false.\nYou can change it later in Settings</string>
    <string name="wait_to_take_a_look_on_it">Wait!! I\'ll take a look on it</string>
    <string name="confirm_and_continue">Confirm and Continue</string>
    <string name="egypt">Egypt</string>
    <string name="cairo">Cairo</string>
    <string name="understood">Understood</string>
    <string name="subtitle">Subtitle</string>
    <string name="title">Title</string>
    <string name="select_calc_method_your_loc_is_following">Select Calculation Method your location is following</string>
    <string name="select_asr_method_your_loc_is_following">Select the Asr Juristic your country follows\nImportant for computing Asr</string>
    <string name="select_high_lat_method_your_loc_is_following">If your location is above sea-level, select the method your local location is using to calculate prayers</string>
    <string name="lt_prev_prayers_subtitle">According to Location and Config you previoulsy selected,\nAnaMuslim calculated PrayTimes for today</string>
    <string name="lt_quick_settings_subtitle">Here are some quick settings users are using most. Edit what you want or leave it unchanged, you are free</string>
    <string name="preview">Preview</string>
    <string name="_two_dots" translatable="false">:</string>
    <string name="more_options">More Options</string>
    <string name="show_options">Show Options</string>
    <string name="all_is_set_you_are_free_to_choose">All is set. You are free now to choose to re-configure app if prayers are false or navigate to AnaMuslim Dashboard</string>
    <string name="start_using_anamuslim">Start using AnaMuslim</string>
    <string name="go_to_dashboard">Go to Dashboard</string>
    <string name="edit_quick_settings">Edit Quick Settings</string>
    <string name="go_back_to_config">Go Back to Configuration</string>
    <string name="config">Config</string>
    <string name="quick_settings">Quick Settings</string>
    <string name="notifications">Notifications</string>
    <string name="ongoing_notification">Ongoing Notification</string>
    <string name="azan">Azan</string>
    <string name="flip_device_to_stop_azan">Flip device to stop Azan</string>
    <string name="press_volume_buttons_to_stop_azan">Press volume buttons to stop Azan</string>
    <string name="general">General</string>
    <string name="mute_during_pray">Mute during Pray</string>
    <string name="configure_ongoing_notification">Configure ongoing notification</string>
    <string name="notify_before_pray">Notify before Pray</string>
    <string name="off">Off</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="_15_min">15 Min</string>
    <string name="iqama_after_azan">Iqama after Azan</string>
    <string name="on">On</string>
    <string name="lets_go">Let\'s go</string>
    <string name="finish">Finish</string>
    <string name="prayers_notifications">Prayers Notifications</string>
    <string name="needed">Needed</string>
    <string name="denied">Denied</string>
    <string name="partially_enabled">Partially Enabled</string>
    <string name="mixed">Mixed</string>
    <string name="granted">Granted</string>
    <string name="granted_some">Granted some</string>
    <string name="msg_quick_settings_alert">Looks like you are finished here ?!\nNow click (Save and Go) to redirect you to AnaMuslim dashboard , click (Wait!!) to stay here or click (Restore Defaults) to restore default settings.\nAll is up to you</string>
    <string name="restore_defaults">Restore defaults</string>
    <string name="save_and_go">Save and Go</string>
    <string name="min">min</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="subtitle_iqama_after_azan">Select which Prays you want to play Iqama after its azan</string>
    <string name="quran">Quran</string>
    <string name="default_welcome">Peace be upon you!\n Muslim brother</string>
    <string name="peace_be_upon_you">Peace be upon you</string>
    <string name="next_pray">Next Pray</string>
    <string name="after">After</string>
    <string name="today_prays">Today Prays</string>
    <string name="remaining_time">Remaining time</string>
    <string name="in">in</string>
    <string name="today_prays_in">Today Prays in</string>
    <string name="show_event_in_calendar">Show Event in Calendar</string>
    <string name="eventRamadanEnd">Ramadan Ends</string>
    <string name="eventRamadanStart">Ramadan Starts</string>
    <string name="islamic_events">Islamic Events</string>
    <string name="allahName_AlRahman">Al-Rahman</string>
    <string name="allahName_AlRaheem">Al Raheem</string>
    <string name="allahName_AlMalik">Al Malik</string>
    <string name="allahName_AlQuddus">Al Quddus</string>
    <string name="allahName_AlSalam">Al-Salam</string>
    <string name="allahNameDesc_AlRahman">He who wills goodness and mercy for all his creatures</string>
    <string name="allahNameDesc_AlRaheem">The One who acts with extreme kindness</string>
    <string name="allahNameDesc_AlMalik">The Sovereign Lord, The One with the complete Dominion, The One Whose Dominion is clear from imperfection</string>
    <string name="allahNameDesc_AlQuddus">The One who is pure from any imperfection and clear from children and adversaries</string>
    <string name="allahNameDesc_AlSalam">The One who is free from every imperfection</string>
    <string name="muharram">Muharram</string>
    <string name="safar">Safar</string>
    <string name="rabi_al_awal">Rabi\' al-Awwal</string>
    <string name="rabi_al_akhar">Rabi\' al-Thani</string>
    <string name="jumada_al_awal">Jumada al-Ula</string>
    <string name="jumada_al_akhar">Jumada al-Akhirah</string>
    <string name="rajab">Rajab</string>
    <string name="shaban">Sha\'ban</string>
    <string name="ramadan">Ramadan</string>
    <string name="shawwal">Shawwal</string>
    <string name="thul_qidah">Thul-Qi\'dah</string>
    <string name="thul_hijjah">Thul-Hijjah</string>
    <string name="surah_1">Al-Fâtihah</string>
    <string name="surah_2">Al-Baqarah</string>
    <string name="surah_3">Âl-`Imrân</string>
    <string name="surah_4">An-Nisâ\'</string>
    <string name="surah_5">Al-Mâ\'idah</string>
    <string name="surah_6">Al-An`âm</string>
    <string name="surah_7">Al-A`râf</string>
    <string name="surah_8">Al-Anfâl</string>
    <string name="surah_9">At-Tawbah</string>
    <string name="surah_10">Yûnus</string>
    <string name="surah_11">H</string>
    <string name="surah_12">Yûs</string>
    <string name="surah_13">Ar-Ra`d</string>
    <string name="surah_14">Ibrâhîm</string>
    <string name="surah_15">Al-Hijr</string>
    <string name="surah_16">An-Nahl</string>
    <string name="surah_17">Al-Isrâ’</string>
    <string name="surah_18">Al-Kahf</string>
    <string name="surah_19">Maryam</string>
    <string name="surah_20">Tâ-hâ</string>
    <string name="surah_21">Al-Anbiyâ’</string>
    <string name="surah_22">Al-Hajj</string>
    <string name="surah_23">Al-Mu’minûn</string>
    <string name="surah_24">An-Nûr</string>
    <string name="surah_25">Al-Furqân</string>
    <string name="surah_26">Ash-Shu`arâ’</string>
    <string name="surah_27">An-Naml</string>
    <string name="surah_28">Al-Qasas</string>
    <string name="surah_29">Al-`Ankabût</string>
    <string name="surah_30">Ar-Rûm</string>
    <string name="surah_31">Luqmâ</string>
    <string name="surah_32">As-Sajdah</string>
    <string name="surah_33">Al-Ahzâb</string>
    <string name="surah_34">Saba’</string>
    <string name="surah_35">Fâtir</string>
    <string name="surah_36">Yâ-sîn</string>
    <string name="surah_37">As-Sâffât</string>
    <string name="surah_38">Sâd</string>
    <string name="surah_39">Az-Zumar</string>
    <string name="surah_40">Ghâfir</string>
    <string name="surah_41">Fussilat</string>
    <string name="surah_42">Ash-Shûrâ</string>
    <string name="surah_43">Az-Zukhruf</string>
    <string name="surah_44">Ad-Dukhân</string>
    <string name="dummy_day">27 Ramadan, 1444H</string>
    <string name="pray_def_dhuhr" />
    <string name="sec">sec</string>
    <string name="hr">hr</string>
    <string name="create_khatma">Create Khatma</string>
    <string name="khatma_planner">Khatma planner</string>
    <string name="hint_khatma_planner1">Choose the suitable plan for you or create your own</string>
    <string name="preplanned">Preplanned</string>
    <string name="custom">Custom</string>
    <string name="plan_my_own_khatma">Plan my own Khatma</string>
    <string name="configure_khatma">Configure Khatma</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="reminder">Reminder</string>
    <string name="msg_khatma_bs">By creating this Khatma, it will replace the last active one you created</string>
    <string name="khatma_title">Khatma title</string>
    <string name="assign_title_for_khatma">Assign a title for your Khatma</string>
    <string name="customize_your_khatma">Make your new Khatma even more customizable</string>
    <string name="dummy_hh_mm_aa">07:49 am</string>
    <string name="dhuhr_pray">@string/dhuhr</string>
    <string name="maghrib_pray">@string/maghrib</string>
    <string name="close">Close</string>
    <string name="dummy_location">Cairo, Egypt</string>
    <string name="remaining_to_azan">Time remaining to Azan</string>
</resources>