<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AnaMuslim">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="3dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_to_left"
        app:navigationIconTint="@color/darkGray"
        app:title="@string/khatma_planner"
        app:titleTextColor="@color/darkGray" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/hint_khatma_planner1"
        android:textAlignment="center" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical|start"
        android:text="@string/preplanned"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="normal" />

    <com.typ.muslim.ui.khatma.planner.KhatmaPlanButton
        android:id="@+id/kpb_10days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp" />

    <com.typ.muslim.ui.khatma.planner.KhatmaPlanButton
        android:id="@+id/kpb_15days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp" />

    <com.typ.muslim.ui.khatma.planner.KhatmaPlanButton
        android:id="@+id/kpb_30days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp" />

    <com.typ.muslim.ui.khatma.planner.KhatmaPlanButton
        android:id="@+id/kpb_60days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_vertical|start"
        android:text="@string/custom"
        android:textAlignment="viewStart"
        android:textColor="@color/darkGray"
        android:textSize="16sp"
        android:textStyle="normal" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_custom_plan"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/plan_my_own_khatma"
        android:textAlignment="viewStart"
        android:textSize="16sp"
        app:cornerRadius="10dp"
        app:strokeWidth="0.5dp"
        app:icon="@drawable/ic_quran_star"
        app:iconPadding="10dp"
        app:iconSize="20dp"
        app:rippleColor="@color/ripple_white"
        app:strokeColor="@color/btn_stroke_color" />

</LinearLayout>