<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_pray_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:maxLines="1"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/dhuhr_pray"
        android:textAlignment="viewStart"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/cairo_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_pray_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:maxLines="1"
        android:paddingStart="5dp"
        android:paddingEnd="15dp"
        android:text="@string/dummy_hh_mm_aa"
        android:textAlignment="viewEnd"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:fontFamily="@font/cairo_regular"
        app:layout_constraintStart_toEndOf="@id/tv_pray_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_pray_definition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:justificationMode="inter_word"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/pray_def_dhuhr"
        android:textColor="@color/colorSecondary"
        android:textSize="16sp"
        app:fontFamily="@font/font_jf_flat_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_pray_name"
        app:lineHeight="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>